added plan for steam removal and removed minecraft